refactor(flora-root)@codebuddy: config视图语义统一——ConfigView轻量只读视图（get/getSubConfig链式下钻），view()懒合并返回ConfigView，get对子结构返回可下钻视图、getSubConfig对标量抛异常、类型化getter对非标量抛异常，新增LazyConfigView实现与ConfigUtilTest.